tests/errors/sem.type-mismatch.offsetptr-arg1.or
main :: () -> void {
    x := 4;
    offsetptr(x, 4);
};
